- support for freedb files which have track title or artist stored in the EXTT fields
- toc reading for cdparanois disabled because it's incomplete for CD EXTRA

- added support for CDDB.py, available at http://cddb-py.sourceforge.net/
(currently only toc reading) this is now the default

- fixed a bug triggered by tocfiles containing quotes on the file name

- added support for EXDD=YEAR:  ID3G, who can tell me who set this "standard"?

- CRs are now ignored in freedb files

- added "Sampler" and "Diverse" to the list of various artists tokens

- -G none now sets the ID3v1 genre to 255("unknown")

- print year and genre when finished (if available)

--- a/README
+++ b/README
@@ -17,13 +17,13 @@
 # This work is released under the GNU GPL, version 2 or later.
 ###
 
-### This is jack 2.99.3
+### This is jack 2.99.4
 
 ### Be warned: you will need python-1.5.2 (or later)!
 
 Please note that jack is a python script. No compilation is needed.
 Copy it somewhere in your $PATH.
-Read INSTALL for further installation details.
+Read doc/INSTALL for further installation details.
 First time users: run jack once to create your .jackrc
 Edit your .jackrc! Some prefs are important!
 run jack -h for quick help or read the doc/(umentation).
