* bumped version to 2.9.5
* include my patched cursesmodule now, together with a distutils installer

* removed ID3.py, this and CDDB.py must be downloaded and installed separately
  (instructions included)

* runs on python2 again, don't know whether it works

* lots of changes, fixes -- I lost track

--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -1,4 +1,4 @@
-### This is jack 2.99.4 (c) 1999,2000 Arne Zellentin
+### This is jack 2.99.5 (c) 1999-2001 Arne Zellentin
 ### free to use, no warranties, no nothing
 ### see COPYING
 
@@ -13,16 +13,24 @@ change dir:
 or (you may have to be root)
 # cp jack* /usr/local/bin
 
-install the ID3 module as it is not yet part of python:
-as root:
-# cp ID3.py /usr/lib/python1.5
-or
-# cp ID3.py /usr/local/lib/python1.5
+install the ID3.py and CDDB.py module:
+* grab them from http://cddb-py.sourceforge.net
+  and            http://id3-py.sourceforge.net
+* if you have the python distutils installed, simply install them with
+# python setup.py install
+  (will probably require root privileges
+* if not, follow the instructions
 
-as a normal user:
-# cp ID3.py $HOME/bin
-# PATH=$PATH:$HOME/bin
-# export PATH
+install my curses module
+* if you have the python distutils installed, run
+# python setup-cursesmodule.py install
+  (will probably require root privileges
+* deactivate the original cursesmodule, as root
+# cd /usr/lib/python1.5/lib-dynload
+  (or /usr/local/lib/python1.5/lib-dynload
+# mv cursesmodule.so cursesmodule.so-orig
+
+If you can't install it with the distutils, read on, else: YOU'RE DONE!
 
 If you want to use the curses mode (belive me, you want to), you have to
 install a special cursesmodule. The one which comes with python has no support
@@ -30,18 +38,18 @@ for pads.  The improved version from Oliver Andrich is missing the function
 resizeterm which I patched in. I mailed the patch to the author so it may be
 included in a future version. Get my version on the download page or download
 the original cursesmodule from
-http://andrich.net/python/selfmade.html#ncursesmodule
-and use the patch in this directory (cursesmodule-1.5b2.patch). You can either
-compile the module yourself or use the precompiled version which is in my
-package. I compiled it on a RedHat 6.0 alike system on an i686. If you want to
-(or have to) compile it yourself, try the following if you can't get the
-Makefile to work:
+http://andrich.net/python/selfmade.html#ncursesmodule (link broken, sorry)
+and use the patch in the cursesmodule directory (cursesmodule-1.5b2.patch). You
+can either compile the module yourself or use the precompiled version which is
+in my package. I compiled it on a RedHat 6.0 (late I added a binary which runs
+on Debian Potato) alike system on an i686. If you want to (or have to) compile
+it yourself, try the following if you can't get the Makefile to work:
 
 # gcc  -g -O2 -I/usr/local/include/python1.5 -I/usr/local/lib/python1.5/config \
 # -DHAVE_CONFIG_H -c ./cursesmodule.c
 # gcc -shared  cursesmodule.o  -lncurses -ltermcap -o cursesmodule.so
 
-Install the cursesmodule.so like you installed the ID3.py module above.
+Install the cursesmodule.so to your site-packages.
 
 If you can't get the precompiled cursesmodule to run, make sure that all
 needed libraries are installed on you system. Check this with
@@ -56,4 +64,3 @@ In this case install all missing libraries. Some Linux systems don't install
 termcap libraries, fix this; e.g. on RedHat systems, you need
 libtermcap-*.rpm.
 
-That's it!
