--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -1,4 +1,4 @@
-### This is jack 2.99.5 (c) 1999-2001 Arne Zellentin
+### This is jack  (c) 1999-2001 Arne Zellentin
 ### free to use, no warranties, no nothing
 ### see COPYING
 
