- prepared it for automatic actualization, released versions contain the CVS log from now on. CHANGELOG is now a template from which ChangeLog is generated when releasing, CVS will contain both in a undefined state.

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,6 +1,7 @@
-Note: This file is no longer kept up-to-date. Use
-http://www.home.unix-ag.org/arne/jack/ChangeLog
-for changes after those listed below.
+
+###############################################################################
+########################## pre-CVS changes follow: ############################
+###############################################################################
 
 ##### This is jack 2.2.2 ...
  ### changes from version 2.1.1 (internal) include:
