--- a/jack.man
+++ b/jack.man
@@ -213,6 +213,11 @@ is used,
 then the file is queried from your freedb server). If you have
 changed it's contents (e.g. because the CD was unknown to freedb)
 and want to rename and tag your MP3s accordingly, use this option.
+Give all other needed options too, like
+.B \-t
+, 
+.B \-E
+, ...
 .TP
 .B \-\-remove
 have Jack remove it's temp jack*-files.
