--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ### jack - extract audio from a CD and encode it using 3rd party software
-### Copyright (C) 1999-2001  Arne Zellentin <zarne@users.sf.net>
+### Copyright (C) 1999-2003  Arne Zellentin <zarne@users.sf.net>
 
 ### This program is free software; you can redistribute it and/or modify
 ### it under the terms of the GNU General Public License as published by
@@ -13,10 +13,11 @@
 
 Requirements:
 
-    * python-1.5.2 or later
+    * python-2.2 or later
     * CDDB.py  - see doc/INSTALL on how to get/install it
     * ID3.py   - see doc/INSTALL on how to get/install it
-    * an MP3 encoder like lame or oggenc for Ogg/Vorbis (default)
+    * pyid3lib-0.5.1 or later if you want ID3v2 support
+    * an encoder like lame (MP3) or oggenc for Ogg/Vorbis (default)
     * a DAE tool like cdparanioa
 
 
@@ -27,9 +28,9 @@ Requirements:
 *********************************************************************
 
 Install the software as described in doc/INSTALL.
-First time users: run jack once to create your .jackrc
-Edit your .jackrc -- Some options are important.
 run jack -h for quick help or read the doc/(umentation).
+Use --save to save frequently uses options to your ~/.jack3rc
 
+--
 Jack has his home at http://www.home.unix-ag.org/arne/jack/
 His creators e-mail address is zarne@users.sf.net
