--- a/jack.man
+++ b/jack.man
@@ -2,8 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.\"TH JACK 1 "#SHORTDATE#"
-.TH JACK 1
+.TH JACK 1 "October 3, 2004"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -34,38 +33,59 @@ Jack works with several encoders, namely
 and
 .B xing.
 Any time during operation (and even when everything is finished and
-the original CD lost) you can let Jack lookup the tracknames at 
+the original CD lost) you can let Jack look up the track names at 
 .B freedb.org
-and rename the tracks accordingly. ID3-tagging of MP3s is performed
+and rename the tracks accordingly. ID3-tagging of MP3s (or insertion
+of equivalent comment fields in Ogg Vorbis files) is performed
 as well. 
-.br
+.PP
 If no freedb-lookup has been performed, Jack drops all files in a
-.B jack-xxxxxxxx
-directory, 
+directory
+.BR ~/jack/jack-xxxxxxxx ,
+with
 .B xxxxxxxx
-representing the CDs ID. This directory is renamed by Jack when the
-appropriate information is known.
-.br 
+representing the CD's CDDB/freedb disc ID. 
+This directory is renamed by Jack when the appropriate information is known.
+.PP
 Most options like ripper, encoder, preferred freedb-Server, directory
 and MP3-filename format, etc. can be user defined by changing the
 defaults in 
-.B ~/.jackrc.
+.B /etc/jackrc
+or
+.BR ~/.jack3rc .
 .PP
-.\" TeX users may be more comfortable with the \fB<whatever>\fP and
-.\" \fI<whatever>\fP escape sequences to invode bold face and italics, 
-.\" respectively.
-
+While Jack is running, these keyboard commands are available:
+.RS
+.TP
+.BR q " or " Q
+quit
+.TP
+.BR p " or " P
+disable ripping (for example, if you need the CD drive)
+.TP
+.BR p " or " P " (again) or " c " or " C
+resume ripping
+.TP
+.BR e " or " E
+pause/continue all encoders 
+.TP
+.BR r " or " R
+pause/continue all rippers.
+.RE
 .SH OPTIONS
 Jack understands the following options:
 .TP
-.B \-a, \-\-read-ahead <read_ahead>
-read how many WAVs in advance. At most read_ahead + num_encoders
-WAVs are ripped before a track has completely been encoded.
-Default is 99 which will read the whole CD, provided there is
-enough disk space.
+.B \-\-append-year        
+if known, append the year to dir in the format " (%y)"
 .TP
 .B \-b, \-\-bitrate <bitrate>
 target bitrate (in kbit/s, default is 160).
+.TP
+.B \-\-char-filter        
+convert file names using a python method
+.TP
+.B \-\-charset            
+charset of freedb data (default "latin-1").
 .TP
 .B \-c, \-\-check-toc 
 compare toc-file and cd-toc, then exit. Jack caches the TOC of a
@@ -75,16 +95,15 @@ matches the toc-file in the current directory, use this option.
 .B \-C, \-\-claim-dir
 rename directories even if they were was not created by Jack.
 .TP
-.B \-d, \-\-dont-work
-don't do DAE or encoding. This may be useful if you only want to
-do a freedb query.
+.B  \-\-cont-failed-query  
+continue without freedb data if query fails.
 .TP
 .B \-D, \-\-create-dirs 
 tells Jack to create sub-directories in which Jack puts all the
 files for the current CD. If no freedb data is available, i.e.
 when not using 
 .B -Q
-, these directorys will be named "jack-xxxxxxxx"
+, these directories will be named "jack-xxxxxxxx"
 where "xxxxxxxx" stands for the CD's freedb-id. Otherwise
 dir_template (see above) will be used. This option is turned on
 by default.
@@ -93,14 +112,27 @@ by default.
 The device-name of your cdrom-drive. The default is 
 .B /dev/cdrom
 .TP
+.B \-\-dir-template       
+if directories are renamed, this is the format used (default "%a/%l")
+.TP
+.B \-d, \-\-dont-work
+don't do DAE or encoding. This may be useful if you only want to
+do a freedb query.
+.TP
 .B \-\-edit-cddb
 open an editor to change the CDDB information which has been obtained
 previously (only useful with -Q).
+.TP
+.B \-\-encoder-name, -E   
+use which encoder (default "oggenc")
 .TP
 .B \-e, \-\-encoders <num_encoders>
 encode how many files in parallel. If you have a SMP machine or
 simply want to stress your system, you can have Jack encode
 several files at once.
+.TP
+.B \-x, \-\-exec
+run predefined command when finished.
 .TP
 .B \-\-extt-is-artist
 the artist is contained in the EXTT fields. The EXTT fields are lines in the
@@ -114,6 +146,9 @@ the track title is contained in the EXTT fields.
 .B \-\-extt-is-comment
 a track comment is contained in the EXTT fields.
 .TP
+.B \-\-force
+do not ask. Like when deleting incomplete files.
+.TP
 .B \-f, \-\-from-tocfile <tocfile>
 rip from a cdrdao created CD image on hd. The specified toc-file 
 contains the name of the image file. Use
@@ -122,14 +157,11 @@ if jack can't find the image file.
 .TP
 .B \-F, \-\-from-image <image_file>
 read audio data from image file. Like
-.B \-\-from-tocfile
-, but the
+.BR \-\-from-tocfile ,
+but the
 image itself is specified instead of the tocfile. If you
 do not have a toc-file (or don't specify a toc-file),
 the TOC is read from the CD itself.
-.TP
-.B \-\-force
-do not ask. Like when deleting incomplete files.
 .TP
 .B \-g, \-\-guess-toc <mp3_files>
 make up a TOC from the MP3 file given in mp3_files. Format is 
@@ -148,20 +180,30 @@ these!
 .B \-G, \-\-id3-genre <id_genre>
 set ID3 genre. Use 'help' to get a list of all known genres.
 .TP
+.B \-Y, \-\-id3-year <year>
+set ID3 year.
+.TP
 .B \-h, \-\-help
 Show summary of options.
 .TP
 .B \-k, \-\-keep-wavs
 do not delete WAVs after encoding them.
 .TP
-.B \-l, \-\-max-load <max_load>
-only start new encoders if your system's load is below (max_load
-+ num_encoders). If the load is too high, encoding operation is
-suspended until above criterium is satisfied.
-.TP
 .B \-m, \-\-mail-submit
 submit freedb entry via e-mail. HTTP submission is preferred. 
 You will have to enter the category of the CD.
+.TP
+.B \-l, \-\-max-load <max_load>
+only start new encoders if your system's load is below (max_load
++ num_encoders). If the load is too high, encoding operation is
+suspended until above criterion is satisfied.
+.TP
+.B \-\-multi-mode         
+try to query freedb for all dirs in searchdirs which
+have no freedb data.
+.TP
+.B \-\-my-mail
+your e-mail address, needed for freedb submissions.
 .TP
 .B \-n, \-\-nice <nice_lvl>
 nice-level with which the encoders are started. Default is 12
@@ -169,12 +211,12 @@ which shouldn't hurt your system much.
 .TP
 .B \-\-no-various
 use this if freedb data says it's "Various Artists" but you want
-the normal renaming scheme, e.g. if Jack can't seperate artist
+the normal renaming scheme, e.g. if Jack can't separate artist
 and track title.
 .TP
 .B \-o, \-\-overwrite
 overwrite existing files, i.e. do not check if already
-ripped WAVs or an already encoded file seem to be ok. Use this if
+ripped WAVs or an already encoded file seem to be OK. Use this if
 you
 .B know
 something went wrong last time. This is off by default.
@@ -189,24 +231,39 @@ On-the-fly operation. Only on some encoders/rippers. Do not
 create WAVs, pipe ripper output through the encoder. Default is
 no as it's a torture for the CDROM drive.
 .TP
+.B \-\-overwrite, -o
+overwrite existing files.
+.\" .TP
+.\" .B \-\-playorder
+.\" use the freedb PLAYORDER field to limit the tracks to
+.\" rip (non-functional, sorry)
+.TP
+.B \-\-quality
+vbr encoding quality. -1 is lowest, 10 highest (default 6).
+.TP
 .B \-q, \-\-query
-do freedb query when all is done. This is useful if Jack was prior
+do freedb query when all is done. This is useful if Jack was previously
 run without a freedb query. If all tracks are done you don't even
 have to have a CD inserted as the TOC is cached by Jack. After
 having finished ripping and encoding, Jack will rename the MP3s
-and tag them using Ben Gertzfield's ID3.py module
+and tag them using Ben Gertzfield's ID3.py module.
 .TP
 .B \-Q, \-\-query-now
 do freedb query when starting. Use this if you are connected to
-the internet when starting Jack. Know that the query may need
+the Internet when starting Jack. Know that the query may need
 user-interaction. After having finished ripping and encoding, Jack
 will rename the files and tag them using Ben Gertzfield's ID3.py
 module.
 .TP
-.B \-r, \-\-reorder
-optimize track-order for disk space. This can save you some peak
-disk space during the encoding process; this may make it possible
-to do a CD which would otherwise fail to be encoded.
+.B \-a, \-\-read-ahead <read_ahead>
+read how many WAVs in advance. At most read_ahead + num_encoders
+WAVs are ripped before a track has completely been encoded.
+Default is 99 which will read the whole CD, provided there is
+enough disk space.
+.TP
+.B \-\-remove-files
+have Jack remove its temp jack*-files.
+Be careful - don't delete them too early!
 .TP
 .B \-R, \-\-rename
 rename and tag files according to freedb file. On startup, Jack
@@ -222,53 +279,73 @@ Give all other needed options too, like
 .B \-E
 , ...
 .TP
-.B \-\-remove
-have Jack remove it's temp jack*-files.
-Be careful - don't delete them too early!
+.B \-\-rename-dir
+rename directory as well (default).
 .TP
-.B \-s, \-\-space <free_space>
-forcably set usable diskspace, in bytes. This option lets you
-limit the disk space Jack uses, maybe you need it for something
-else? Be careful: if set too high, ripping and encoding will
-probably fail. The default is to look how much is free and to use
-this value.
+.B \-\-rename-fmt
+format of normal files (default "%n - %t")
 .TP
-.B \-S, \-\-swab
-swap byteorder from image file. As cdrdao momentarily only
-outputs "raw" .cdr files, you quite likely want to swap the
-byteorder. Try this option if your WAVs and encoded files contain 
-only noise.
-This is on by default as cdrdao currently generates .cdr files
-that are "wrong".
+.B \-\-rename-fmt-va
+format of Various Artists files (default "%n - %a - %t")
+.TP
+.B \-r, \-\-reorder
+optimize track-order for disk space. This can save you some peak
+disk space during the encoding process; this may make it possible
+to do a CD which would otherwise fail to be encoded.
+.TP
+.B \-\-replacement-chars  
+unusable chars are replaced by the corresponding list item (default "%").
+.TP
+.B \-\-ripper
+which program to use for extracting the audio data (default "cdparanoia").
+.TP
+.B \-\-save
+save options to \fI~/.jack3rc\fP file and exit.
 .TP
 .B \-\-scan-dirs <recurse_dirs>
 Scan 
 .B <recurse_dirs>
-levels from the current working directory for a matching toc-file.
+levels from the current working directory for a matching toc-file (0
+to disable, default 2).
 .TP
 .B \-\-search <search_dir>
 add <search_dir> to the list of directories searched when looking for the
-workdir.
+workdir (default ".").
 .TP
 .B \-\-server <freedb_server> 
-which freedb server to use. Don't forget to set your proxy.
+which freedb server to use. Don't forget to set your HTTP proxy.
 Default server is freedb.freedb.org.
 .TP
 .B \-\-silent-mode
 be quiet (no screen output).
 .TP
+.B \-s, \-\-space <free_space>
+forcibly set usable disk space, in bytes. This option lets you
+limit the disk space Jack uses, maybe you need it for something
+else? Be careful: if set too high, ripping and encoding will
+probably fail. The default is to look how much is free and to use
+this value.
+.TP
 .B \-\-submit
 submit freedb entry via HTTP. You will have to enter the category
 of the CD.
 .TP
-.B \-t, \-\-tracks <tracks>
-limit ripping and encoding to the specified tracks, use comma to
-seperate tracks. Ranges are also possible; 5-9 is equivalent to
-5,6,7,8,9; 12- is like specifying track 12,...,last_track. The
-default is to process the whole CD.
+.B \-S, \-\-swab
+swap byte order from image file. As cdrdao momentarily only
+outputs "raw" .cdr files, you quite likely want to swap the
+byte order. Try this option if your WAVs and encoded files contain 
+only noise.
+This is on by default as cdrdao currently generates .cdr files
+that are "wrong".
 .TP
 .B \-\-todo
 print what would be done and exit.
+.TP
+.B \-t, \-\-tracks <tracks>
+limit ripping and encoding to the specified tracks, use comma to
+separate tracks. Ranges are also possible; 5-9 is equivalent to
+5,6,7,8,9; 12- is like specifying track 12,...,last_track. The
+default is to process the whole CD.
 .TP
 .B \-u, \-\-undo-rename
 undo file renaming and exit. If you don't like how Jack renamed
@@ -276,9 +353,15 @@ your files, use this option to restore the previous state.
 Several levels of undo are possible. Note
 that ID3 tags are not restored.
 .TP
+.B \-\-unusable-chars
+characters which can't be used in filenames (default "/").
+.TP
 .B \-\-upd-progress
-have Jack re-create it's temp files. Use this if you deleted them
+have Jack re-create its temp files. Use this if you deleted them
 too early.
+.TP
+.B \-\-update-freedb, -U
+update the freedb info and exit.
 .TP
 .B \-v, \-\-vbr
 Generate variable bitrate files, only on encoders which support
@@ -286,9 +369,9 @@ this. Default is no.
 .TP
 .B \-\-various
 when parsing freedb data, Jack assumes that if the disc\'s artist
-is set to "Various Artists" the track titles have the format
+is set to "Various" the track titles have the format
 "[artist] - [title]". If the disc title is set to something else
-and you still want above behaviour, use 
+and you still want the above behaviour, use 
 .B \-\-various.
 .TP
 .B \-\-various-swap
@@ -297,13 +380,16 @@ exchange artist and title, many freedb entries have them wrong.
 .B \-\-wait
 wait for key press before quitting.
 .TP
-.B \-x, \-\-exec
-run predefined command when finished.
+.B \-w, \-\-workdir
+where to create directories and put the files.
 .TP
-.B \-Y, \-\-id3-year <id3_year>
-set ID3 year.
-.br
-.br
+.B \-w, \-\-workdir <dir>
+where to create directories and put the files (default \fI~/jack\fP).
+.\"  --write-id3v1        write a smart id3v1 tag to the encoded file [1]
+.\"  --write-id3v2        write an id3v1 and an id3v2 tag to the encoded file [1]
+.TP
+.B \-\-write-m3u
+create a playlist in .m3u format.
 .SH EXAMPLES
 Insert a CD, fire up jack:
 .RS
@@ -311,16 +397,16 @@ jack
 .RE
 .PP
 Now watch it work. It's fun for a while. After having finished, you have
-the follwing files on your HD: track_01.mp3, track_02.mp3, ...,
+the following files on your HD: track_01.mp3, track_02.mp3, ...,
 track_nn.mp3 plus jack.toc, jack.freedb, jack.progress. The last three are
 used to store the state jack is in so it can resume work when interrupted.
-.br
+.PP
 Jack will create a directory called jack-xxxxxxxx for you, there it
 stores all the file for the CD whose id is xxxxxxxx. After a freedb query
 this directory is renamed to something human readable, like "Artist -
 Title".
-.br
-When jack is interrupted, call it again using the same commandline as
+.PP
+When jack is interrupted, call it again using the same command line as
 before to resume work, in this case
 .RS
 jack
@@ -331,30 +417,31 @@ Now let's try a freedb query:
 jack -q
 .RE
 .PP
-when succesful the files are now renamed to something more readable and 
+when successful the files are now renamed to something more readable and 
 have been ID3 tagged accordingly. jack.freedb contains the queried freedb
 entry, the original file has been backed up to jack.freedb.bak.
-.br
+.PP
 All in one: query, rip, encode, cleanup:
 .RS
-jack -Q --remove
+jack -Q --remove-files
 .RE
 .PP
-.br
 Editing / normalizing / stripping the WAV files before encoding:
 .RS
-jack -O --remove ; gnoise *wav ; jack -g *wav ; jack
+jack -O --remove-files ; gnoise *wav ; jack -g *wav ; jack
 .RE
 .PP
 Just replace gnoise by the operation you'd like to perform.
-.br
+.SH FILES
+.IP \fI/etc/jackrc\fP 
+Site-wide configuration file.
+.IP \fI~/.jack3rc\fP 
+User-specific configuration file.
 .SH AUTHOR
 Arne Zellentin <zarne@users.sf.net> is the author of Jack.
 .SH SEE ALSO
-.BR cdparanoia (1)
-,
-.BR cdda2wav (1)
-,
+.BR cdparanoia (1),
+.BR cdda2wav (1),
 .BR oggenc (1)
 and
 .BR lame (1)
